--- a/index.html
+++ b/index.html
@@ -354,33 +354,36 @@ p {
 				<p>Hoy es...</p>
 				<p>un hermoso dia como ningun otro</p>
 				<p>pero te das cuenta</p>
-				<p>otro año ha pasado</p>
+				<p>que otro año ha pasado</p>
 				<p>en un abrir y cerrar de ojos</p>
-				<p><strong>sin embargo</strong></p>
+				<p><strong>Sin embargo</strong></p>
 				<p>Sabes..?</p>
 				<p>hoy es especial</p>
 				<p>tan especial para ti</p>
 				<p>por eso</p>
 				<p>Vamos a hacer ...</p>
-				<p>la mejor celebración de los tiempos</p>
+				<p>la mejor celebración</p>
+				<p>de todos los tiempos</p>
 				<p>y dejame compartir...</p>
-				<p>un pedazo de felicidad para ti</p>
-				<p>yo, hice todo esto...</p>
-				<p>como regalo de cumpleños para ti</p>
-				<p>gracias por estar ahí</p>
-				<p>gracias por la amistad que hicimos</p>
-				<p>gracias por todos los momentos juntos</p>
+				<p>un pedazo de felicidad para ti.</p>
+				<p>Yo, hice todo esto...</p>
+				<p>como regalo de cumple para ti</p>
+				<p>Gracias por estar ahí</p>
+				<p>Gracias por la amistad que hicimos</p>
+				<p>Gracias por todos los momentos juntos</p>
 				<p>Gracias por TODO</p>
 				<p>Te deseo lo mejor</p>
 				<p>Que tu vida sea cómoda</p>
 				<p>Que todos tus deseos se hagan realidad</p>
-				<p>Recuerda</p>
-				<p>tus ambiciones</p>
-				<p>vives como pájaro libre...</p>
+				<p>Y Recuerda</p>
+				<p>Tus ambiciones</p>
+				<p>recuerda que...</p>
+				<p>vives como pájaro libre</p>
 				<p>volando en el cielo azul</p>
-				<p>Ahora las cosas son diferentes...</p>
+				<p>Y ahora</p>
+				<p>las cosas son diferentes...</p>
 				<p>La historia real de tu vida</p>
-				<p>esta a punto de comenzar/p>
+				<p>esta a punto de comenzar</p>
 				<p>de echo..</p>
 				<p>esta vida no es facil como pensamos</p>
 				<p>pero ...</p>
@@ -391,9 +394,9 @@ p {
 				<p>porque...</p>
 				<p>este año sera mejor</p>
 				<p>y espero</p>
-				<p>encontrarás...</p>
-				<p>felicidad en el camino</p>
-				<p>mantén tu espíritu en alto </p>
+				<p>encuentres...</p>
+				<p>mucha felicidad en el camino.</p>
+				<p>Mantén tu espíritu en alto </p>
 				<p>disfruta cada momento...</p>
 				<p>que experimentas hoy</p>
 				<p>llénalo con tu sonrisa mas bella</p>
